# green-book

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conda-lock.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: python-package-conda.yml
src/greenbook/cli/: main.py
src/greenbook/data/: base.py  consts.py  entries.py  show.py
src/greenbook/definitions/: __init__.py  classes.py  point.py  prices.py  prizes.py
src/greenbook/render/: labels.py  results.py
src/greenbook/secretary/: allocation.py  manager.py  registration.py
test-output/: classes.csv  contestants.csv
tests/integration/: test_end_to_end.py
tests/unit/: test_cli.py  test_registration.py
