# See here the documentation for this file's format:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = green-book
description = Entry management for a village show
author = Nick Baskerville
author_email = nick@Baskerville.in
license = GNU General Public License v3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/npbaskerville/green-book
# change if running only on windows, mac or linux (comma-separated)
platforms = any
# add here all kinds of additional classifiers as defined under
# https = //pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python
version = 0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
	=src

install_requires =
    # Notes:
    # 1. These deps are used when installing sibylla-alpha as a library.
    # 2. They should not specify concrete specific versions, otherwise packages using
    #    alpha might run in into irresolvable dependency requirements.
    # 3. Versions are limited only where a newer version would break alpha (see Pipfile).
  pandas
  attrs


# require a specific python version, e.g. python 2.7 or > = 3.4
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
	tests

[options.extras_require]
testing =
	pytest
	pytest-cov


[options.entry_points]
console_scripts =
    green-book = greenbook.cli:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# use this option if your package is pure-python
universal = 1
